[package]
name = "proxy-server"
version = "0.3.0"
edition = "2021"
description = "Low level proxy server"
authors = ["Sergey Kolmiller <uyem.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["http", "proxy", "tcp"]
categories = ["network-programming"]
repository = "https://github.com/kolserdav/proxy-server"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs", "src/**/*.rs"]
rust-version = "1.67"

[lib]
name = "proxy_server"

[features]
default = ["chunk_1KB"]
chunk_1KB = []
chunk_5KB = []
chunk_10KB = []
chunk_50KB = []
chunk_100KB = []
chunk_500KB = []
chunk_1MB = []
chunk_5MB = []
chunk_10MB = []

[dependencies]
regex = "1.7.1"
