[package]
name = "proxy-server"
version = "0.6.0"
edition = "2021"
description = "Low level proxy server"
authors = ["Sergey Kolmiller <uyem.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["http", "proxy", "tcp"]
categories = ["network-programming"]
repository = "https://github.com/kolserdav/proxy-server"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs", "src/**/*.rs"]
rust-version = "1.74"


[features]
default = ["chunk_1KB"]
chunk_1KB = []
chunk_5KB = []
chunk_10KB = []
chunk_50KB = []
chunk_100KB = []
chunk_500KB = []
chunk_1MB = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
napi = { version = "2.14.1", optional = true }
napi-derive = { version = "2.14.2", optional = true }
regex = "1.7.1"
serde = { version = "1.0.193", features = [ "derive" ] }
